[gd_scene load_steps=17 format=3 uid="uid://b6qatv1cnqfy4"]

[ext_resource type="Script" path="res://Obstacles/rock_head.gd" id="1_5s770"]
[ext_resource type="Texture2D" uid="uid://corcfwjmrwhy3" path="res://Free/Traps/Rock Head/Blink (42x42).png" id="1_eq1mm"]
[ext_resource type="Texture2D" uid="uid://ba1m17ic5atrs" path="res://Free/Traps/Rock Head/Bottom Hit (42x42).png" id="2_ch7fi"]
[ext_resource type="Texture2D" uid="uid://cv2igbr2wbnc1" path="res://Free/Traps/Rock Head/Idle.png" id="3_itkmb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0jcs4"]
atlas = ExtResource("1_eq1mm")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug0ue"]
atlas = ExtResource("1_eq1mm")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wa06"]
atlas = ExtResource("1_eq1mm")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lafl"]
atlas = ExtResource("1_eq1mm")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_axxy8"]
atlas = ExtResource("2_ch7fi")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxtcy"]
atlas = ExtResource("2_ch7fi")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_utsb7"]
atlas = ExtResource("2_ch7fi")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_udvgk"]
atlas = ExtResource("2_ch7fi")
region = Rect2(126, 0, 42, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_efnq6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jcs4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug0ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wa06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lafl")
}],
"loop": false,
"name": &"blink",
"speed": 10.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_axxy8")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_gxtcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utsb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udvgk")
}],
"loop": false,
"name": &"hit ground",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_itkmb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6fbv"]
size = Vector2(31.2, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ymrq"]
size = Vector2(12, 0.730001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bomer"]
size = Vector2(82, 1749)

[node name="RockHead" type="RigidBody2D"]
texture_filter = 1
collision_layer = 4
collision_mask = 2
mass = 5.0
gravity_scale = 2.5
freeze = true
script = ExtResource("1_5s770")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_efnq6")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.19209e-06, -2.84217e-14)
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_v6fbv")

[node name="Hitbox" type="Area2D" parent="." groups=["Death"]]
position = Vector2(0, 7.62939e-06)
scale = Vector2(2.5, 2.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(3.72529e-09, 15.0875)
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_5ymrq")

[node name="FindGround" type="RayCast2D" parent="."]
position = Vector2(0, 37)
target_position = Vector2(0, 3)
collision_mask = 2

[node name="FindPlayer" type="Area2D" parent="."]
position = Vector2(0, 39)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FindPlayer"]
position = Vector2(0, 859.5)
shape = SubResource("RectangleShape2D_bomer")

[connection signal="body_entered" from="FindPlayer" to="." method="_on_find_player_2_body_entered"]
